--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Grocery Store | Analytics</title>
-	</head>
-	<body>
-		<h1>Grocery Store &amp; Analytics</h1>
-	</body>
-</html>
+---
+layout: base
+---
+
