--- a/index.html
+++ b/index.html
@@ -2,3 +2,12 @@
 layout: base
 ---
 
+<h1>{{ site.title }}</h1>
+
+<ul>
+	{% for product in site.products %}
+		<li>
+			<a href="{{ product.url }}">{{ product.title }}</a>
+		</li>
+	{% endfor %}
+</ul>
