--- a/cart.html
+++ b/cart.html
@@ -6,3 +6,63 @@ title: Cart
 <header>
 	<h1>Shopping cart</h1>
 </header>
+
+<template data-cart-product-template>
+	<tr>
+		<th>[[ name ]]</th>
+
+		<td class="cell--number">$[[ price ]].00</td>
+
+		<td class="cell--number">
+			<button
+				class="button--icon button--lowlight"
+				onclick="handleAddtocart(event, '[[ id ]]', -1)"
+				type="button"
+			>&minus;</button>
+
+			[[ quantity ]]
+
+			<button
+				class="button--icon button--lowlight"
+				onclick="handleAddtocart(event, '[[ id ]]')"
+				type="button"
+			>&plus;</button>
+		</td>
+
+		<td class="cell--number">$[[ cost ]].00</span></td>
+	</tr>
+</template>
+
+<table>
+	<thead>
+		<tr>
+			<th>Product</th>
+			<th class="cell--number">Price</th>
+			<th class="cell--number">Quantity</th>
+			<th class="cell--number">Subtotal</th>
+		</tr>
+	</thead>
+
+	<tbody data-cart-products></tbody>
+
+	<tfoot>
+		<th colspan="3">Total</th>
+
+		<th class="cell--number">
+			$<span data-cart-total></span>.00
+		</th>
+	</tfoot>
+</table>
+
+<div class="buttonset">
+	<button
+		data-cart-checkout
+		type="button"
+	>Checkout</button>
+
+	<button
+		class="button--lowlight"
+		onclick="handleCartClear(event)"
+		type="button"
+	>Empty cart</button>
+</div>
