--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ layout: base
 			<img
 				alt="Picture of {{ product.name }}"
 				class="product-card__image"
-				src="/assets/img/{{ product.id }}.jpg"
+				src="assets/img/{{ product.id }}.jpg"
 			/>
 
 			<div class="product-card__body">
