--- a/cart.html
+++ b/cart.html
@@ -59,6 +59,7 @@ title: Cart
 <div class="buttonset">
 	<button
 		data-cart-checkout
+		onclick="handleCheckout(event)"
 		type="button"
 	>Checkout</button>
 
